 397409 remove unneeded temporary objects from Quark::to_view()
 398074 free memory read on socket error
 396523 fix minor compiler warnings
 390735 prompt for save path if none specified when adding a nzb via command-line.
 380429 References: header gets lost when superseding an article.
 380902 Setting 'work offline' doesn't go offline if busy downloading

0.120 "Plate of Shrimp"
 356329 'Save Attachments' only saves one of multiple attachments (Walt)
 378973 CVS Compile problem uulib/fptools.c (Rinaldi J. Montessi)
 378823 Lockup when replying to articles with Message-ID containing %i (Duncan)
 375953 Missing files from POTFILES.in (Daniel Nylander)
 375405 Corrupted uudecode output with Pan 0.119 (Shantanu Goel)
 373520 Crash when creating a new score, if no article is selected. (Carl Roth)
 373523 Thread scoring is too slow (Carl Roth)
 378710 Some NZB files can't be imported (Martin Meinhold)
 381976 Crash when importing nzb file and previous path doesn't exist
 387940 "pan --version" doesn't work (Wouter Bolsterlee)
 391471 Task Pane doesn't have a Window icon (Darren Albers)

0.119 "Karma Hunters"
 373193 'get headers' menu adds xover task to bottom of queue (Bigfoot)
 372616 Cancel / Supercedes is unable to recognize my articles (Frederic Crozat)
 372241 pan crashes on some malformed charset messages. (Artur Jachacy)
 371720 references: field breaks threads in thunderbird (Frederic Crozat)
 371453 priority for post isn't high enough (Frederic Crozat)
 370930 speed up header pane filtering (Vincent Dupaquis)
 370195 uulib/fptools.c crash (António Godinho)
 363166 IPv6: no IPv4 fallback (Pav Lucistnik)
 355805 add option to mark group read before getting new headers (Brad Hudson)

0.118 "Gustaf Von Musterhausen"
 358061 try to make multiple connections at once. (Duncan)
 360375 non-ascii subject is mangled (F. Crozat)
 361448 make statusbar use less vertical space (Michael Monreal)