@@ -15,6 +15,7 @@
  390735 prompt for save path if none specified when adding a nzb via command-line.
  380429 References: header gets lost when superseding an article.
  380902 Setting 'work offline' doesn't go offline if busy downloading
+ 350999 Switching header threading collapses threads, loses selection
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
